--- a/Bonafide-Frontend/package.json
+++ b/Bonafide-Frontend/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "axios": "^1.9.0",
     "ethers": "^6.14.0",
+    "lucide-react": "^0.510.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
+    "react-qr-code": "^2.0.15",
     "react-router-dom": "^7.5.3",
     "xlsx": "^0.18.5"
   },
