--- a/Bonafide-Backend/package.json
+++ b/Bonafide-Backend/package.json
@@ -13,6 +13,7 @@
     "@supabase/supabase-js": "^2.49.4",
     "bcryptjs": "^3.0.2",
     "canvas": "^3.1.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "crypto-js": "^4.2.0",
