--- a/Bonafide-Frontend/package.json
+++ b/Bonafide-Frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.9.0",
     "ethers": "^6.14.0",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.510.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
