--- a/Bonafide-Frontend/package.json
+++ b/Bonafide-Frontend/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.9.0",
     "ethers": "^6.14.0",
     "js-cookie": "^3.0.5",
+    "framer-motion": "^12.11.0",
     "lucide-react": "^0.510.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
