--- a/Bonafide-Frontend/package.json
+++ b/Bonafide-Frontend/package.json
@@ -21,6 +21,7 @@
     "react-qr-code": "^2.0.15",
     "react-router-dom": "^7.5.3",
     "react-share": "^5.2.2",
+    "react-toastify": "^11.0.5",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
