--- a/Bonafide-Frontend/package.json
+++ b/Bonafide-Frontend/package.json
@@ -18,6 +18,7 @@
     "ethers": "^5.8.0",
     "framer-motion": "^12.11.3",
     "js-cookie": "^3.0.5",
+    "js-cookies": "^1.0.4",
     "lucide-react": "^0.510.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
