--- a/Bonafide-Backend/package.json
+++ b/Bonafide-Backend/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@canvas-fonts/arial": "^1.0.4",
+    "@canvas-fonts/times-new-roman": "^1.0.4",
     "@supabase/supabase-js": "^2.49.4",
     "bcryptjs": "^3.0.2",
     "canvas": "^3.1.0",
